Bug 1089413 - Only test resource sharing on d3d feature level >= 10. r=jmuizelaar, a=sledru